<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rc_dialog_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/delete_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/delete_friend_title"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/delete_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/delete_friend_content"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/rc_button_hollow"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_negative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/cancel"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?colorAccent" />

        <TextView
            android:id="@+id/dialog_positive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/ok"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>