<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quick_split_first_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:background="@color/colorDrawer">

    <TextView
        android:id="@+id/quick_split_money_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/toolbar_height"
        android:text="@string/amount_dot"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quick_split_money_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?colorAccent"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/not_include_tip"
        android:inputType="number"
        android:maxLength="7"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="#edd9d9d9"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/quick_split_money_text_view"
        app:layout_constraintEnd_toStartOf="@+id/yan"
        app:layout_constraintStart_toEndOf="@+id/quick_split_money_text_view"
        app:layout_constraintTop_toTopOf="@+id/quick_split_money_text_view" />

    <TextView
        android:id="@+id/yan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/yen"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/quick_split_money_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quick_split_money_edit_text" />

    <TextView
        android:id="@+id/how_many_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/people_amount"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quick_split_money_text_view" />

    <EditText
        android:id="@+id/people_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?colorAccent"
        android:ems="10"
        android:gravity="start"
        android:inputType="number"
        android:maxLength="7"
        android:textColor="@android:color/white"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/how_many_people"
        app:layout_constraintEnd_toStartOf="@+id/people"
        app:layout_constraintStart_toEndOf="@+id/how_many_people"
        app:layout_constraintTop_toTopOf="@+id/how_many_people"
        tools:text="10" />

    <TextView
        android:id="@+id/people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/person"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/people_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/people_edit_text" />

    <!--<CheckBox-->
    <!--android:id="@+id/self_check_box"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:checked="true"-->
    <!--android:fontFamily="@font/chinese_one"-->
    <!--android:visibility="gone"-->
    <!--app:fontFamily="@font/chinese_one"-->
    <!--app:layout_constraintStart_toStartOf="@+id/how_many_people"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/how_many_people" />-->

    <!--<TextView-->
    <!--android:id="@+id/textView5"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:text="包含自己"-->
    <!--android:visibility="gone"-->
    <!--app:fontFamily="@font/chinese_one"-->
    <!--app:layout_constraintBottom_toBottomOf="@+id/self_check_box"-->
    <!--app:layout_constraintStart_toEndOf="@+id/self_check_box"-->
    <!--app:layout_constraintTop_toTopOf="@+id/self_check_box" />-->

    <TextView
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tip_dot"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintStart_toStartOf="@+id/how_many_people"
        app:layout_constraintTop_toBottomOf="@+id/how_many_people" />

    <EditText
        android:id="@+id/fee_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?colorAccent"
        android:ems="10"
        android:gravity="start"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:textColor="@android:color/white"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/fee"
        app:layout_constraintEnd_toStartOf="@+id/fee_percent"
        app:layout_constraintStart_toEndOf="@+id/fee"
        app:layout_constraintTop_toTopOf="@+id/fee"
        tools:text="10" />

    <TextView
        android:id="@+id/fee_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/percent"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/fee_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fee_edit_text" />

    <!--<TextView-->
    <!--android:id="@+id/next_page_text_view"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="24dp"-->
    <!--android:background="@drawable/rc_button_hollow"-->
    <!--android:paddingStart="20dp"-->
    <!--android:paddingTop="4dp"-->
    <!--android:paddingEnd="20dp"-->
    <!--android:paddingBottom="4dp"-->
    <!--android:text="計算"-->
    <!--android:visibility="gone"-->
    <!--app:fontFamily="@font/chinese_one"-->
    <!--app:layout_constraintBottom_toBottomOf="@+id/qs_card_view"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="@+id/qs_card_view" />-->

    <TextView
        android:id="@+id/previous_page_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rc_button_hollow"
        android:paddingStart="20dp"
        android:paddingTop="4dp"
        android:paddingEnd="20dp"
        android:paddingBottom="4dp"
        android:text="@string/reset"
        app:fontFamily="@font/chinese_one"
        app:layout_constraintBottom_toBottomOf="@+id/qs_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/qs_card_view" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/quick_split_second_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fee_edit_text">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/quick_equal_split"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/yen"
                        android:textSize="24sp"
                        app:fontFamily="@font/chinese_one"
                        app:layout_constraintBottom_toBottomOf="@+id/equal_split_number"
                        app:layout_constraintStart_toEndOf="@+id/equal_split_number"
                        app:layout_constraintTop_toTopOf="@+id/equal_split_number" />

                    <TextView
                        android:id="@+id/equal_split_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="24sp"
                        app:fontFamily="@font/chinese_one"
                        app:layout_constraintBottom_toBottomOf="@+id/average"
                        app:layout_constraintStart_toEndOf="@+id/average"
                        app:layout_constraintTop_toTopOf="@+id/average"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/average_each_person"
                        android:textSize="24sp"
                        app:fontFamily="@font/chinese_one"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quick_unequal_split"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/unequal_result_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:fontFamily="@font/chinese_one" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quick_percent_split"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/percent_result_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:fontFamily="@font/chinese_one" />
            </LinearLayout>
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/qs_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="?colorPrimary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/previous_page_text_view"
        app:layout_constraintStart_toStartOf="@+id/fee"
        app:layout_constraintTop_toBottomOf="@+id/fee">

        <!--backgroundTint 控制 三角形-->
        <Spinner
            android:id="@+id/split_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="?colorSecondary"
            android:gravity="center"
            android:spinnerMode="dialog"
            android:theme="@style/myDropTheme" />

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>